syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message CreateConfigRequest {
	OpConfig config = 1 [(validator.field) = {msg_exists: true}];
}

message CreateConfigResponse {
	Config config = 1;
}
